[package]
name = "open_loong_sdk_node"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = { workspace = true }
ndarray = "0.16.1"
openloong_sdk_rust = { path = "../../openloong_rust/openloong_sdk_rust" }
